# python-workshop-adventure-game

./: .gitignore  0_setting_up_the_project.md  1_program_the_game.md  2_add_events.md  3_exploring_events.md  4_create_gui_streamlit.md  5_create_fastapi.md  6_use_agent_to_play_game.md  LICENSE  README.md  exploration_sample_set.json  test_api.http
presentation/: Python workshop.pptx
solution/: data-analysis.ipynb  game_events.jsonl  main.py  pyproject.toml  run_agent.py  run_fastapi.py  run_streamlit.py
solution/src/solution/: __init__.py  board.py  events.py  fastapi_game.py  game.py  streamlit_game.py
solution/tests/: test_board.py
webapp/: index.html  package-lock.json  package.json  vite.config.js
webapp/src/: App.jsx  VictoryScreen.jsx  api.js  main.jsx  theme.js
webapp/src/components/ui/: provider.jsx
